# pyviscous

./: .gitignore  .requirements_dev.txt.swp  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: TypeB_function.ipynb  functionA1.ipynb  functionA2.ipynb  functionB.ipynb  functionC.ipynb  rosenbrock.ipynb
examples/BowAtBanff/: BowAtBanff.ipynb  README.md  input_output_data.txt
examples/Liu2024Functions/: functionA1.ipynb  functionA2.ipynb  rosenbrock.ipynb
examples/Rosbrock_function/: Rosbrock_function.ipynb
examples/TypeA_function/: TypeA_function.ipynb  functionA2.ipynb
examples/TypeB_function/: TypeB_function.ipynb
examples/TypeC_function/: TypeC_function.ipynb
pyviscous/: __init__.py  cli.py  plot.py  pyviscous.py
tests/: __init__.py  test_pyviscous.py
